# rust-paxos

./: .envrc  .gitignore  .rustfmt.toml  README.md  flake.nix
paxos/: .rustfmt.toml  Cargo.toml
paxos/database/: init.sql
paxos/src/: config.rs  main.rs  message.rs  network.rs  node.rs  proposal.rs  repository.rs
paxos/src/acceptor/: mod.rs  network.rs
paxos/src/actors/: acceptor.rs  mod.rs  proposer.rs
paxos/src/domain/: learner.rs  message.rs  mod.rs  node.rs  proposal.rs  proposer_node.rs
paxos/src/network/: channels.rs  mod.rs
paxos/src/network/acceptor/: channels.rs
paxos/src/network/proposer/: channels.rs
paxos/src/proposer/: mod.rs  network.rs
two_phase_commit/: Cargo.toml
