[package]
name = "paxos"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
uuid = { version = "1.11.0", features = ["serde", "v7"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap = { version = "4.5.26", features = ["derive"] }
async-trait = "0.1.83"
rusqlite = "0.32.1"
tracing-appender = "0.2.3"
anyhow = "1.0.95"
